@@ -1,6 +1,6 @@
 Begin3
 Title:          K3b 
-Version:        0.9
+Version:        0.10.99
 Entered-date:   
 Description:    CD writing software for KDE 3
 Keywords:       CD-Writing, Ripping, CD-Audio, CDDA
